seo update to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-    <title>Baraka Direct</title>
-    </head>
-  <link 
-    rel="stylesheet" 
-    href="style.css"/>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Baraka Direct – Essays on Technology, Culture & Systems Thinking</title>
+  <meta name="description" content="Baraka Direct is the publishing outlet of David Baraka. Essays and explorations on technology, culture, ADHD, and systems thinking.">
+  <meta name="keywords" content="Baraka Direct, David Baraka, technology, culture, ADHD, systems thinking, philosophy, innovation">
 <body>
 <div class="loading">
     <div></div>
