--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Baraka Direct – Essays on Technology, Culture & Systems Thinking</title>
   <meta name="description" content="Baraka Direct is the publishing outlet of David Baraka. Essays and explorations on technology, culture, ADHD, and systems thinking.">
   <meta name="keywords" content="Baraka Direct, David Baraka, technology, culture, ADHD, systems thinking, philosophy, innovation">
+</head>
 <body>
 <div class="loading">
     <div></div>
