--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baraka Direct – Essays on Technology, Culture & Systems Thinking</title>
+  <title>Baraka Direct</title>
   <meta name="description" content="Baraka Direct is the publishing outlet of David Baraka. Essays and explorations on technology, culture, ADHD, and systems thinking.">
   <meta name="keywords" content="Baraka Direct, David Baraka, technology, culture, ADHD, systems thinking, philosophy, innovation">
+      <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div class="loading">
